Hi foo
# Version 5.0.3
 * Option for mining requiring a double click to reduce accidental mining

# Version 5.0.2
 * Teleportation for paths as an option, this should probably stay off considering how it will get you banned / not work in most places.
 * Warning when entering a game detected as pvp (not 100% accurate but it does it's job good enough).
 * Crash fix

# Version 5.0.1
 * Item bridges show entire sequence when hovering
 * Paths can now be repeated
 * Bug fixes

# Version 5.0
 * Updated to v122
 * !builder command with multiple options (run with no options for details)
 * ! command that literally just prints an ! to chat
 * A ton of bug fixes
 * Bridge click and drag uses new vanilla one.
 * Reactor warnings and sounds can have an optional core distance cap
 * No more infinite wave skipping because it breaks stuff
 * On spawn/death/ctrl clicking a core, always spawn at the highest tier core available.
 * Changed formatting of changelog and feature lists, its now aligned to the left and text wraps instead of scrolling horizontally (ur welcome red soul)
 * Option to not clear chat when leaving a world and joining another (ur welcome again red soul)
 * New core attack warnings in chat display the exact position of the core being attacked.
 * Optionally broadcast core attack warnings to entire lobby
 * Teleport (won't work on most servers but it works in steam lobbies so thats fun, !tp or tile actions menu)
 * Unit picker fixed for real this time, there was some issues when ping fluctuated a bunch.
 * Chat now works in singleplayer
 * Cursor and player position are no longer in a weird spot
 * Tile log hud is still weird lol
 * Warnings when a certain annoying griefer joins your steam lobby
 * Auto updater no longer crashes the game when running through steam
 * Auto updater now automatically deletes old versions
 * Added some additional info to crash logs, changed the format so people can copy paste it nicely...
 * Probably more stuff I forgot as always
