@@ -29,7 +29,7 @@ public abstract class ClientLauncher extends ApplicationCore implements Platform
     private static final int loadingFPS = 20;
 
     private long lastTime;
-    private long beginTime;
+    protected long beginTime;
     private boolean finished = false;
     private LoadRenderer loader;
 
