@@ -264,7 +264,13 @@ public class Renderer implements ApplicationListener{
         Draw.draw(Layer.plans, overlays::drawBottom);
         Navigation.draw();
         Draw.z(Layer.space);
-        if(Core.settings.getBool("drawhitboxes")) Groups.unit.forEach(u -> {Draw.color(u.team.color.cpy().a(.5f)); Fill.rect(u.x, u.y, u.hitSize(), u.hitSize());});
+        if(Core.settings.getBool("drawhitboxes")) {
+            for (Unit u : Groups.unit) {
+                if (!Core.camera.bounds(Tmp.r1).overlaps(u.x() - u.hitSize()/2f, u.y() - u.hitSize()/2f, u.hitSize(), u.hitSize())) continue;
+                Draw.color(u.team.color.cpy().a(.5f));
+                Fill.rect(u.x, u.y, u.hitSize(), u.hitSize());
+            }
+        }
         Draw.color();
 
         if(animateShields && Shaders.shield != null){
