@@ -12,6 +12,7 @@ import mindustry.*;
 import mindustry.content.*;
 import mindustry.gen.*;
 import mindustry.graphics.*;
+import mindustry.type.UnitType;
 import mindustry.world.*;
 
 import static mindustry.Vars.*;
@@ -135,7 +136,7 @@ public class Effect{
 
     public static void create(Effect effect, float x, float y, float rotation, Color color, Object data){
         if(headless || effect == Fx.none) return;
-        if(Core.settings.getBool("effects")){
+        if(Core.settings.getBool("effects") && UnitType.alpha != 0){
             Rect view = Core.camera.bounds(Tmp.r1);
             Rect pos = Tmp.r2.setSize(effect.clip).setCenter(x, y);
 
