@@ -63,6 +63,7 @@ public class LiquidBulletType extends BulletType{
 
     @Override
     public void draw(Bullet b){
+        if (UnitType.alpha == 0) return;
         Draw.color(liquid.color, Color.white, b.fout() / 100f);
 
         Fill.circle(b.x, b.y, orbSize);
