@@ -1,4 +1,6 @@
 Hi foo
+# Foo and I are too lazy to update this, join the discord in the client tab on the main menu if you have any questions.
+
 # Version 5.0.3
  * Option for mining requiring a double click to reduce accidental mining
 
